--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.4.0",
     "element-plus": "^2.3.5",
     "vue": "^3.2.47",
-    "vue-router": "^4.2.1"
+    "vue-router": "^4.2.1",
+    "vue-socket.io": "^3.0.10"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
